--- a/vantafull.html
+++ b/vantafull.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VantaScript Full</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -14,35 +14,65 @@
       <a href="#">Support</a>
     </nav>
   </header>
+
   <main>
     <h1>VantaScript Full - $12.99</h1>
     <div class="badges">
-      <span class="badge">✔️ Undetected</span>
-      <span class="badge">🔥 Best Seller</span>
-      <span class="badge">🔒 Safe</span>
+      <span class="badge">💻 Advanced Features</span>
+      <span class="badge">🔥 Full Access</span>
+      <span class="badge">⚙️ Premium Support</span>
     </div>
-    <p>Full version with all features unlocked.</p>
+    <p>
+      Get the complete script suite with every premium feature included. Recommended for power users.
+    </p>
     <a href="scripts.html" class="back-button">← Back</a>
   </main>
+
   <footer>
     <div class="footer-content">
       <div class="footer-logo">Vanta</div>
       <p>Your go-to source for secure and optimized scripts.</p>
       <div class="socials">
-        <a href="#">YouTube</a>
-        <a href="#">Discord</a>
+        <a href="#">🎥 YouTube</a>
+        <a href="#">💬 Discord</a>
       </div>
       <div class="footer-links">
-        <a href="#">Catalog</a>
-        <a href="#">Blog</a>
-        <a href="#">FAQ</a>
-        <a href="#">Support</a>
-        <a href="#">User Agreement</a>
-        <a href="#">Offer Agreement</a>
+        <div>
+          <strong>Navigate</strong>
+          <ul>
+            <li><a href="#">Catalog</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Support</a></li>
+          </ul>
+        </div>
+        <div>
+          <strong>Information</strong>
+          <ul>
+            <li><a href="#">User Agreement</a></li>
+            <li><a href="#">Offer Agreement</a></li>
+          </ul>
+        </div>
+        <div>
+          <strong>Follow Us</strong>
+          <ul>
+            <li><a href="#">Discord</a></li>
+            <li><a href="#">YouTube</a></li>
+          </ul>
+        </div>
+        <div>
+          <strong>Payments</strong>
+          <div class="payments">
+            <img src="visa.png" alt="Visa" />
+            <img src="paypal.png" alt="PayPal" />
+            <img src="btc.png" alt="Bitcoin" />
+            <img src="mastercard.png" alt="MasterCard" />
+          </div>
+        </div>
       </div>
-      <div class="payments">Visa | PayPal | Crypto</div>
     </div>
   </footer>
 </body>
 </html>
+
 
